--- a/MetaCiv/.classpath
+++ b/MetaCiv/.classpath
@@ -6,7 +6,7 @@
 	<classpathentry exported="true" kind="lib" path="lib/jars/lwjgl_util.jar"/>
 	<classpathentry exported="true" kind="lib" path="lib/jars/lwjgl.jar">
 		<attributes>
-			<attribute name="org.eclipse.jdt.launching.CLASSPATH_ATTR_LIBRARY_PATH_ENTRY" value="MetaCivTk3/lib/natives-win"/>
+			<attribute name="org.eclipse.jdt.launching.CLASSPATH_ATTR_LIBRARY_PATH_ENTRY" value="MetaCivTk3/lib/natives"/>
 		</attributes>
 	</classpathentry>
 	<classpathentry exported="true" kind="lib" path="lib/jars/slick-util.jar"/>
